Layout wrapping fixed

--- a/app/assets/stylesheets/votes.css.scss
+++ b/app/assets/stylesheets/votes.css.scss
@@ -46,7 +46,8 @@ a:hover {		color: #003366; text-decoration: none; }
 #content {			margin: 0px 10px;  }
 
 
-h2 {				margin: 0px; display: inline; color: #cc3333;  }
+h1 {				margin: 0px; display: inline; color: #333; font-size: 150%;  }
+h2 {				margin: 0px; display: inline; color: #cc3333;  font-size: 150%;  }
 h3 {				margin:0px; display:inline; }
 
 
